--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
         "react-transition-group": "4.4.1",
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
-        "resize-observer-polyfill": "1.5.1"
+        "resize-observer-polyfill": "1.5.1",
+        "screenfull": "^5.1.0"
     },
     "devDependencies": {
         "@babel/core": "7.12.10",
