--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react": "17.0.1",
         "react-addons-transition-group": "15.6.2",
         "react-dom": "17.0.1",
+        "react-dotdotdot": "^1.3.1",
         "react-redux": "7.2.2",
         "react-resizable": "1.11.0",
         "react-router": "5.2.0",
