--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
         "url": "https://github.com/fatalxiao/dpe-frontend/issues"
     },
     "dependencies": {
-        "alcedo-ui": "2.55.8",
+        "alcedo-ui": "2.55.9",
         "babel-polyfill": "6.26.0",
         "classnames": "2.2.6",
         "connected-react-router": "6.8.0",
         "dom-helpers": "5.2.0",
-        "highcharts": "8.2.2",
+        "highcharts": "9.0.0",
         "history": "4.10.1",
         "js-cookie": "2.2.1",
         "lodash": "4.17.20",
@@ -42,7 +42,7 @@
         "react": "17.0.1",
         "react-addons-transition-group": "15.6.2",
         "react-dom": "17.0.1",
-        "react-dotdotdot": "^1.3.1",
+        "react-dotdotdot": "1.3.1",
         "react-redux": "7.2.2",
         "react-resizable": "1.11.0",
         "react-router": "5.2.0",
@@ -52,32 +52,32 @@
         "redux": "4.0.5",
         "redux-thunk": "2.3.0",
         "resize-observer-polyfill": "1.5.1",
-        "screenfull": "^5.1.0"
+        "screenfull": "5.1.0"
     },
     "devDependencies": {
-        "@babel/core": "7.12.10",
-        "@babel/plugin-proposal-class-properties": "7.12.1",
-        "@babel/plugin-proposal-decorators": "7.12.12",
-        "@babel/plugin-proposal-do-expressions": "7.12.1",
-        "@babel/plugin-proposal-export-default-from": "7.12.1",
-        "@babel/plugin-proposal-export-namespace-from": "7.12.1",
-        "@babel/plugin-proposal-function-bind": "7.12.1",
-        "@babel/plugin-proposal-function-sent": "7.12.1",
-        "@babel/plugin-proposal-json-strings": "7.12.1",
-        "@babel/plugin-proposal-logical-assignment-operators": "7.12.1",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.1",
-        "@babel/plugin-proposal-numeric-separator": "7.12.7",
-        "@babel/plugin-proposal-optional-chaining": "7.12.7",
-        "@babel/plugin-proposal-pipeline-operator": "7.12.1",
-        "@babel/plugin-proposal-throw-expressions": "7.12.1",
+        "@babel/core": "7.12.13",
+        "@babel/plugin-proposal-class-properties": "7.12.13",
+        "@babel/plugin-proposal-decorators": "7.12.13",
+        "@babel/plugin-proposal-do-expressions": "7.12.13",
+        "@babel/plugin-proposal-export-default-from": "7.12.13",
+        "@babel/plugin-proposal-export-namespace-from": "7.12.13",
+        "@babel/plugin-proposal-function-bind": "7.12.13",
+        "@babel/plugin-proposal-function-sent": "7.12.13",
+        "@babel/plugin-proposal-json-strings": "7.12.13",
+        "@babel/plugin-proposal-logical-assignment-operators": "7.12.13",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "7.12.13",
+        "@babel/plugin-proposal-numeric-separator": "7.12.13",
+        "@babel/plugin-proposal-optional-chaining": "7.12.13",
+        "@babel/plugin-proposal-pipeline-operator": "7.12.13",
+        "@babel/plugin-proposal-throw-expressions": "7.12.13",
         "@babel/plugin-syntax-dynamic-import": "7.8.3",
         "@babel/plugin-syntax-import-meta": "7.10.4",
-        "@babel/plugin-transform-runtime": "7.12.10",
+        "@babel/plugin-transform-runtime": "7.12.15",
         "@babel/polyfill": "7.12.1",
-        "@babel/preset-env": "7.12.11",
-        "@babel/preset-react": "7.12.10",
-        "@babel/register": "7.12.10",
-        "@babel/runtime": "7.12.5",
+        "@babel/preset-env": "7.12.13",
+        "@babel/preset-react": "7.12.13",
+        "@babel/register": "7.12.13",
+        "@babel/runtime": "7.12.13",
         "archiver": "5.2.0",
         "assets-webpack-plugin": "7.0.0",
         "babel-core": "7.0.0-bridge.0",
@@ -93,7 +93,10 @@
         "copy-webpack-plugin": "7.0.0",
         "core-js": "3.8.3",
         "cross-env": "7.0.3",
-        "css-loader": "5.0.1",
+        "css-loader": "5.0.2",
+        "eslint": "7.19.0",
+        "eslint-plugin-react": "7.22.0",
+        "eslint-plugin-react-hooks": "4.2.0",
         "eventsource-polyfill": "0.9.6",
         "express": "4.17.1",
         "extract-text-webpack-plugin": "3.0.2",
@@ -103,7 +106,7 @@
         "happypack": "5.0.1",
         "html-loader": "1.3.2",
         "html-webpack-include-assets-plugin": "1.0.10",
-        "html-webpack-plugin": "4.5.1",
+        "html-webpack-plugin": "5.0.0",
         "http-proxy-middleware": "1.0.6",
         "mkdirp": "1.0.4",
         "node-sass": "5.0.0",
@@ -111,19 +114,19 @@
         "optimize-css-assets-webpack-plugin": "5.0.4",
         "ora": "5.3.0",
         "path": "0.12.7",
-        "postcss": "8.2.4",
-        "postcss-loader": "4.2.0",
+        "postcss": "8.2.5",
+        "postcss-loader": "5.0.0",
         "postcss-preset-env": "6.7.0",
         "react-hot-loader": "4.13.0",
         "redbox-react": "1.6.0",
         "request": "2.88.0",
         "rimraf": "3.0.2",
-        "sass-loader": "10.1.1",
+        "sass-loader": "11.0.1",
         "shelljs": "0.8.4",
         "style-loader": "2.0.0",
         "uglifyjs-webpack-plugin": "2.2.0",
         "url-loader": "4.1.1",
-        "webpack": "5.18.0",
+        "webpack": "5.21.2",
         "webpack-dev-middleware": "4.1.0",
         "webpack-hot-middleware": "2.25.0",
         "webpack-merge": "5.7.3"
