--- a/release/package.json
+++ b/release/package.json
@@ -17,11 +17,11 @@
         "url": "https://github.com/fatalxiao/dpe-frontend/issues"
     },
     "dependencies": {
-        "compression": "^1.7.2",
-        "connect-history-api-fallback": "^1.5.0",
-        "express": "^4.16.3",
-        "http-proxy-middleware": "^0.18.0",
-        "moment": "^2.21.0",
-        "path": "^0.12.7"
+        "compression": "1.7.4",
+        "connect-history-api-fallback": "1.6.0",
+        "express": "4.17.1",
+        "http-proxy-middleware": "1.0.6",
+        "moment": "2.29.1",
+        "path": "0.12.7"
     }
 }
