--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
         "url": "https://github.com/fatalxiao/pieb-with-dpe-frontend/issues"
     },
     "dependencies": {
-        "alcedo-ui": "2.56.8",
+        "alcedo-ui": "2.56.15",
         "babel-polyfill": "6.26.0",
         "classnames": "2.3.1",
         "connected-react-router": "6.9.1",
-        "dom-helpers": "5.2.0",
-        "highcharts": "9.0.1",
+        "dom-helpers": "5.2.1",
+        "highcharts": "9.1.0",
         "history": "4.10.1",
         "js-cookie": "2.2.1",
         "lodash": "4.17.21",
@@ -41,59 +41,59 @@
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-dotdotdot": "1.3.1",
-        "react-redux": "7.2.3",
-        "react-resizable": "1.11.1",
+        "react-redux": "7.2.4",
+        "react-resizable": "3.0.1",
         "react-router": "5.2.0",
         "react-router-config": "5.1.1",
         "react-router-dom": "5.2.0",
         "react-transition-group": "4.4.1",
-        "redux": "4.0.5",
+        "redux": "4.1.0",
         "redux-thunk": "2.3.0",
         "resize-observer-polyfill": "1.5.1",
         "screenfull": "5.1.0"
     },
     "devDependencies": {
-        "@babel/core": "7.13.14",
+        "@babel/core": "7.14.3",
+        "@babel/eslint-parser": "^7.14.3",
         "@babel/plugin-proposal-class-properties": "7.13.0",
-        "@babel/plugin-proposal-decorators": "7.13.5",
-        "@babel/plugin-proposal-do-expressions": "7.12.13",
+        "@babel/plugin-proposal-decorators": "7.14.2",
+        "@babel/plugin-proposal-do-expressions": "7.14.0",
         "@babel/plugin-proposal-export-default-from": "7.12.13",
-        "@babel/plugin-proposal-export-namespace-from": "7.12.13",
+        "@babel/plugin-proposal-export-namespace-from": "7.14.2",
         "@babel/plugin-proposal-function-bind": "7.12.13",
         "@babel/plugin-proposal-function-sent": "7.12.13",
-        "@babel/plugin-proposal-json-strings": "7.13.8",
-        "@babel/plugin-proposal-logical-assignment-operators": "7.13.8",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "7.13.8",
-        "@babel/plugin-proposal-numeric-separator": "7.12.13",
-        "@babel/plugin-proposal-optional-chaining": "7.13.12",
+        "@babel/plugin-proposal-json-strings": "7.14.2",
+        "@babel/plugin-proposal-logical-assignment-operators": "7.14.2",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "7.14.2",
+        "@babel/plugin-proposal-numeric-separator": "7.14.2",
+        "@babel/plugin-proposal-optional-chaining": "7.14.2",
         "@babel/plugin-proposal-pipeline-operator": "7.12.13",
         "@babel/plugin-proposal-throw-expressions": "7.12.13",
         "@babel/plugin-syntax-dynamic-import": "7.8.3",
         "@babel/plugin-syntax-import-meta": "7.10.4",
-        "@babel/plugin-transform-runtime": "7.13.10",
+        "@babel/plugin-transform-runtime": "7.14.3",
         "@babel/polyfill": "7.12.1",
-        "@babel/preset-env": "7.13.12",
+        "@babel/preset-env": "7.14.2",
         "@babel/preset-react": "7.13.13",
-        "@babel/register": "7.13.14",
-        "@babel/runtime": "7.13.10",
+        "@babel/register": "7.13.16",
+        "@babel/runtime": "7.14.0",
         "archiver": "5.3.0",
-        "assets-webpack-plugin": "7.0.0",
+        "assets-webpack-plugin": "7.1.0",
         "babel-core": "7.0.0-bridge.0",
-        "babel-eslint": "10.1.0",
         "babel-jest": "26.6.3",
         "babel-loader": "8.2.2",
         "babel-plugin-transform-import-sync": "2.0.0",
         "babel-plugin-transform-react-remove-prop-types": "0.4.24",
         "babel-plugin-webpack-aliases": "1.1.3",
         "compression": "1.7.4",
-        "compression-webpack-plugin": "7.1.2",
+        "compression-webpack-plugin": "8.0.0",
         "connect-history-api-fallback": "1.6.0",
-        "copy-webpack-plugin": "8.1.1",
-        "core-js": "3.10.0",
+        "copy-webpack-plugin": "9.0.0",
+        "core-js": "3.12.1",
         "cross-env": "7.0.3",
-        "css-loader": "5.2.0",
-        "eslint": "7.23.0",
-        "eslint-plugin-react": "7.23.1",
+        "css-loader": "5.2.6",
+        "eslint": "7.27.0",
+        "eslint-plugin-react": "7.23.2",
         "eslint-plugin-react-hooks": "4.2.0",
         "eventsource-polyfill": "0.9.6",
         "express": "4.17.1",
@@ -102,24 +102,24 @@
         "html-loader": "2.1.2",
         "html-webpack-include-assets-plugin": "1.0.10",
         "html-webpack-plugin": "5.3.1",
-        "http-proxy-middleware": "1.1.0",
+        "http-proxy-middleware": "2.0.0",
         "mkdirp": "1.0.4",
-        "node-sass": "5.0.0",
         "opn": "5.5.0",
         "ora": "5.4.0",
         "path": "0.12.7",
-        "postcss": "8.2.9",
-        "postcss-loader": "5.2.0",
+        "postcss": "8.3.0",
+        "postcss-loader": "5.3.0",
         "postcss-preset-env": "6.7.0",
         "react-hot-loader": "4.13.0",
         "request": "2.88.0",
         "rimraf": "3.0.2",
-        "sass-loader": "11.0.1",
+        "sass": "^1.34.0",
+        "sass-loader": "11.1.1",
         "shelljs": "0.8.4",
         "style-loader": "2.0.0",
         "url-loader": "4.1.1",
-        "webpack": "5.30.0",
-        "webpack-dev-middleware": "4.1.0",
+        "webpack": "5.37.1",
+        "webpack-dev-middleware": "4.3.0",
         "webpack-hot-middleware": "2.25.0",
         "webpack-merge": "5.7.3"
     }
