--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "keywords": [
         "dural-puncture-epidural",
         "dpe",
-        "react"
+        "react",
+        "vivy"
     ],
     "license": "MIT",
     "bugs": {
