--- a/.ncurc.json
+++ b/.ncurc.json
@@ -1,7 +1,8 @@
 {
     "upgrade": true,
     "reject": [
-        "css-loader",
-        "history"
+        "history",
+        "react-router",
+        "react-router-dom"
     ]
 }
